--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/base.css">
     <title>Admin Dashboard</title>
 </head>
 
@@ -213,6 +214,8 @@
                 <div class="body">
                     <div class="container">
 
+                        <!-- Employee List -->
+                        
                         <!-- <div class="body-content">
                             <div class="first">
                                 <button class="add-account">
@@ -494,6 +497,8 @@
                             </div>
                         </div> -->
 
+                        <!-- View Employee Detail -->
+
                         <!-- <div class="employee-detail">
                             <div class="employee-title">
                                 Employee Detail Information
@@ -528,6 +533,8 @@
                                 </div>
                             </div>
                         </div> -->
+
+                        <!-- Update Employee -->
 
                         <!-- <div class="employee-update">
                             <div class="employee-title">
@@ -569,6 +576,8 @@
                             </div>
                         </div> -->
 
+                        <!-- Product List -->
+
                         <!-- <div class="body-content">
                             <div class="first">
                                 <button class="add-account">
@@ -577,7 +586,7 @@
                                             <i class="fa-solid fa-plus"></i>
                                         </span>
                                         <div class="text">
-                                            Add Account
+                                            Add Product
                                         </div>
                                     </a>
                                 </button>
@@ -1365,7 +1374,7 @@
                         </div> -->
 
                         <!-- Order Detail  -->
-                        <div class="order-detail">
+                        <!-- <div class="order-detail">
                             <div class="order-first">
                                 <div class="order-info">
                                     <div class="title">
@@ -1608,7 +1617,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
